# cexamples

./: .clang-format  .gitignore  CMakeLists.txt
cii/tests/: cii_test_dynamic_arrays.c
cmake/: conf.testdata.cmake
src/: CMakeLists.txt
src/fileIO/: CMakeLists.txt  loadFile.c  loadFile.h
tests/: CMakeLists.txt
tests/IO/: read_stdin.c  test_fread.c  test_printf.c
tests/_testdata/: test_load.c  testdata.c  testdata.h
tests/algorithms/: CMakeLists.txt  test_sorting.c
tests/algorithms/bits/: test_wordtobits.c
tests/algorithms/randomNumber/: rand_intel.c  rand_orig_LCG.c  runtests.sh  shortcut.h
tests/arithmetics/: CMakeLists.txt  test_rounding.c
tests/casting/: CMakeLists.txt  set_float.c
tests/fileIO/: CMakeLists.txt  readlines.c  test_fseek.c
tests/memory/: CMakeLists.txt  createSharedMemory.c  funcPtr.c  mmap.c  mmap_write.c  sizeof_array.c  structPacking.c
tests/parallel/posix_fork/: CMakeLists.txt  forkAndDie.c
tests/parallel/pthread/: CMakeLists.txt  minimalist.c
tests/preprocessor/: assert_value.c  string_dvar.sh
tests/string/: CMakeLists.txt  strstr.c
